* move the homogenous float aggregate determination function to a common     unit for ARM and AArch64
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41419 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -543,13 +543,16 @@ ifeq ($(PPC_TARGET),sparc64)
 override LOCALOPT+=-Fusparcgen -Fisparcgen
 endif
 ifeq ($(PPC_TARGET),arm)
-override LOCALOPT+=
+override LOCALOPT+=-Fuarmgen
 endif
 ifeq ($(PPC_TARGET),mipsel)
 override LOCALOPT+=-Fumips
 endif
 ifeq ($(PPC_TARGET),jvm)
 override LOCALOPT+=-Fujvm
+endif
+ifeq ($(PPC_TARGET),aarch64)
+override LOCALOPT+=-Fuarmgen
 endif
 ifeq ($(PPC_TARGET),i8086)
 override LOCALOPT+=-Fux86
