+ compiler/symdef.pas: Add missing call to tderef.reset methods in all tdef constructors.   + compiler/sysmsym.pas: Do the same for for all tsym constructors.   + compiler/symtype.pas: Generate internalerror in  tcompilerppufile.putderef     if a deref field has index -1, as this means that buildderef was not called     while it should have been called.   + compiler/symtable.pas: Fix bug report itself by adding an extra local variable     CHANGED to add extra cycles in tstoredsymtable.buildderef_referenced method.
New tests for this bug report: tests/webtbs/tw35139.pp and  tests/webtbs/tw35139a.pp



git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41425 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -16643,6 +16643,8 @@ tests/webtbs/tw35027.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/webtbs/tw35028.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/webtbs/tw3504.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3506.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/webtbs/tw35139.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/webtbs/tw35139a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3523.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3529.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3531.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
