Fix fullcycle/fullinstall by adding missing armgen directory -Fu option if PPC_TARGET is armeb
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41455 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -545,6 +545,9 @@ endif
 ifeq ($(PPC_TARGET),arm)
 override LOCALOPT+=-Fuarmgen
 endif
+ifeq ($(PPC_TARGET),armeb)
+override LOCALOPT+=-Fuarmgen
+endif
 ifeq ($(PPC_TARGET),mipsel)
 override LOCALOPT+=-Fumips
 endif
