--- a/.gitattributes
+++ b/.gitattributes
@@ -3505,6 +3505,8 @@ packages/fcl-xml/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=n
 packages/fcl-xml/Makefile.fpc.fpcmake svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-xml/buildfclxml.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-xml/buildfclxml.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/fcl-xml/examples/reducexml.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/fcl-xml/examples/reducexml.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-xml/examples/test.html svn_mime_002dtype=text%2Fhtml svn_eol_002dstyle=native
 packages/fcl-xml/examples/testhtml.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-xml/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
